try fix services info text responsive on mobile

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -813,7 +813,7 @@ footer {
 
 	.info-services-container {
 		color: #c3c9cc;
-		margin-bottom: 10%;
+		margin-bottom: 40px;
 
 		@media screen and (min-width: 768px) {
 			margin-bottom: 70px;
